err/python-ntlm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ntlm'...
Compiling './lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py'...
***   File "./lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py", line 110
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/U32.py'...
***   File "./lib/python3.5/site-packages/ntlm/U32.py", line 18
    C = 0x1000000000L
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_c.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_c.py", line 208
    r, l, t = PERM_OP((r, l, t),  4, U32(0x0f0f0f0fL))
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_data.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_data.py", line 25
    U32(0x00820200L), U32(0x00020000L), U32(0x80800000L), U32(0x80820200L),
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/ntlm.py'...
***   File "./lib/python3.5/site-packages/ntlm/ntlm.py", line 112
    print "NTLM_NegotiateUnicode set"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_ntlm-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
